--- a/index.html
+++ b/index.html
@@ -4,41 +4,7 @@
 	<meta charset="utf-8">
 	<title>React Hello World</title>
 	<script src="bundle.js" defer></script>
-	<style >
-		ul {
-			list-style: none;
-			padding-left: 0px;
-			margin-left: 25px;
-		}
-
-		ul li {
-			display: block;
-			margin-bottom: 15px;
-		}
-
-		.checked {
-			text-decoration: line-through;
-		}
-
-		form {
-			display: flex;
-			margin-left: 25px;
-			flex-direction: column;
-			width: 50%;
-		}
-
-		input {
-			margin-bottom: 15px;
-		}
-
-		textarea {
-			margin-bottom: 15px;
-		}
-
-		button {
-			width: 200px;
-		}
-	</style>
+	<link rel="stylesheet" href="./build/main.css">
 </head>
 <body>
 	<div id="app"></div>
